Version 2.1.196
    Crossbows can now be fished up with enchantments

    NOTES:
    Crossbows is not in the default fishing loot list, you'd have to add it yourself.

Version 2.1.195
    Fixed a null connection error which affected some SQL users

Version 2.1.194
    Fixed an XP exploit
    Updated SQL to not throw errors if upgrades.yml was reset for any reason
    Updated SQL to use the newest driver path (and fall back to the old one if the new one doesn't exist on the server)
    Locale override files are now named locale_override.properties (converted automatically/generated automatically)
    Existing in use locale override files will be renamed to locale_override.properties and have some useful text put in them
    mcMMO will now generate a locale override file with some detailed instructions if one doesn't exist (will be found in /plugins/mcMMO/locales/locale_override.properties)

    NOTES:
    If you were overriding locale before this update mcMMO will just rename the existing override file to locale_override.properties add some useful text and then load it
    Remember you can use /mcreloadlocale to swap the edits in without restarting the server

Version 2.1.193
    Fixed another bug where mcrank/mctop/leaderboards weren't loading
    Fixed a bug where override locales weren't being loaded (but worked after a reloadlocale command)
    (Unit Tests) Added a test to make sure leaderboards for FlatFile were working
    Fixed blocks being dropped from blast mining even if yield was set to 0 (thanks Warriorrrr)
    Fixed Tree feller not working entirely if one fake block break event is cancelled. (thanks Warriorrrr)
    Fixes no woodcutting xp being rewarded if a tree is too big while using tree feller. (thanks Warriorrrr)
    Updated pl locale (thanks Mich3l3k)

Version 2.1.192
    Removed some debug messages from FlatFileDatabaseManager